# task-line

./: .gitignore  Cargo.toml  README.md  biome.json  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: docker-release.yml  lint.yml  workflow.yml
.tangled/workflows/: deploy.yml  lint.yml
.zed/: settings.json
app/assets/css/: main.css
app/components/: FilterSheet.vue  TimeHeader.vue
app/components/Edit/: DataSelect.vue  EditTodoSheet.vue  NewTodoSheet.vue
app/components/Nav/: VerticalNav.vue
app/components/Settings/: Categories.vue  GoogleLogin.vue  SettingsSheet.vue  Tags.vue
app/composables/: useEditTodoEventBus.ts  useFetchOptions.ts  useFilteredTodos.ts  useFilters.ts  useInitData.ts  useSettings.ts  useTodoDragging.ts  useWeekDays.ts
app/pages/: index.vue
app/stores/: useCategoryStore.ts  useTagStore.ts  useTodoStore.ts
app/utils/: authClient.ts  date.ts  jwt.ts
i18n/locales/: de.json  en.json
libs/client/: Cargo.toml
libs/client/src/: fetch.rs  types.rs
notification-daemon/: Cargo.toml  README.md  justfile
notification-daemon/src/: main.rs
public/: sw.js
rpi-checker/: Cargo.toml
rpi-checker/src/: main.rs
server/: auth.ts
server/middleware/: cors.ts
server/plugins/: db.ts  storage.ts
server/utils/: auth.ts  authHandle.ts  sse.ts
shared/: array.ts  auth.ts  date.ts  todo.ts  types.ts
test/e2e/: app.test.ts  editTodo.test.ts  newTodo.test.ts  settings.test.ts  utils.ts
tests/: app.test.ts  editTodo.test.ts  newTodo.test.ts  settings.test.ts  utils.ts
(+84 files in other folders)
