[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

chrono = { version = "0.4.42", features = ["serde"] }

reqwest = "0.12.26"
reqwest-eventsource = "0.6.0"

tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"

color-eyre = "0.6.5"
